--- a/user_admin/print_invoice.html
+++ b/user_admin/print_invoice.html
@@ -33,134 +33,131 @@
 	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 </head>
 <body>
-	<header class="clearfix">
-		<div id="logo">
-			<img src="assets/media/misc/inv_header.png">
-		</div>
-		<!-- waktu -->
-		<section class="waktuNoInvoice">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<h3><span id="noInvoice">#0854312</span></h3>
-						<h3><span id="tanggalInvoice">11 Januari 2020</span></h3>
-						<h3><span id="waktuPengerjaan">08.00 - 9.30 WITA</span></h3>
-					</div>
-					
-				</div>
-
+	<div class="background">
+		<header class="clearfix">
+			<div id="logo">
+				<img src="assets/media/misc/inv_header.png">
 			</div>
-		</section>
-		<!-- akhir waktu -->
-	</header>
-	<main>
-		<!-- Table transakasi -->
-		<table>
-			<thead>
-				<tr>
-					<th class="head-table">TREATMENT</th>
-					<th class="head-table">THERAPIST</th>
-					<th class="head-table">PRICE</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td class="isi" id="tipeTreatment" name="tipeTreatment">Eylash Extension</td>
-					<td class="isi" id="therapist" name="therapist">Nur Azizah</td>
-					<td class="isi" id="price" name="price">Rp400.000</td>
-				</tr>
-				<tr>
-					<td class="isi" id="tipeTreatment" name="tipeTreatment">Eylash Extension</td>
-					<td class="isi" id="therapist" name="therapist">Nur Azizah</td>
-					<td class="isi" id="price" name="price">Rp400.000</td>
-				</tr>
-			</tbody>
-		</table>
-		<!-- akhir table transaksi -->
-		
-		<!-- info total -->
-		<section class="info-total">
-			<div class="container">
-				<div class="row">
-					<div class="col-7 catatan kt-hidden">
-						<div class="form-group row">
-							<h4 for="tipeKomplain" class="col-4 col-form-label">Tipe Komplain</h4>
-							<div class="col-8">
-								<input disabled="" class="form-control" type="text" value="Gatal-gatal" name="tipeKomplain" id="tipeKomplain">
-							</div>
+			<!-- waktu -->
+			<section class="waktuNoInvoice mt-5">
+				<div class="container">
+					<div class="row">
+						<div class="col-6">
+							<h4 class="head-pengirim">From</h4>
+							<h4 id="namaPenerima" name="namaPenerima">Fabulash By Rara</h4>
+							<h4 id="alamatPenerima" name="alamatPenerima">Jl. Boulevard Ruko Cemp No.5</h4>
+							<h4 id="noTelpon" name="noTelpon">0812-1688-8480</h4>
 						</div>
-						<div class="form-group row">
-							<h4 for="deskripsi Komplain" class="col-4 col-form-label">Deskripsi</h4>
-							<div class="col-8">
-								<textarea rows="3" class="form-control" type="text" value="Artisanal kale" id="deskripsi Komplain" disabled="">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya </textarea>
-							</div>
+						<div class="offset-3 col-3">
+							<h3><span id="noInvoice">#0854312</span></h3>
+							<h3><span id="tanggalInvoice">11 Januari 2020</span></h3>
+							<h3><span id="waktuPengerjaan">08.00 - 9.30 WITA</span></h3>
 						</div>
-					</div>
-					<div class="offset-8 col-4 text-left">
-						<div class="row">
-							<div class="col-5">
-								<h4>Subtotal</h4>
-							</div>
-							<div class="col-1">
-								<h4>:</h4>
-							</div>
-							<div class="col-6">
-								<h4 id="subtotal" name="subtotal">Rp800.000</h4>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-5">
-								<h4>Diskon</h4>
-							</div>
-							<div class="col-1">
-								<h4>:</h4>
-							</div>
-							<div class="col-6">
-								<h4 id="diskon" name="diskon">Rp100.000</h4>
-							</div>
-						</div>
-						<div class="row row-total">
-							<div class="col-5">
-								<h4>Total</h4>
-							</div>
-							<div class="col-1">
-								<h4>:</h4>
-							</div>
-							<div class="col-6">
-								<h4 id="total" name="total">Rp700.000</h4>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- akhir info total -->
 
-		<!-- info pengirim penerima -->
-		<section class="pengirimPenerima mt-5" id="pengirimPenerima">
-			<div class="container">
-				<div class="row pengirim-penerima">
-					<div class="col-4">
-						<h4 class="head-penerima">To</h4>
-						<h4 id="namaPenerima" name="namaPenerima">Darnilia</h4>
-						<h4 id="alamatPenerima" name="alamatPenerima">Jln. Tun Abdul Razak Ruko Walk J10 Citra Land Gowa</h4>
-						<h4 id="noTelpon" name="noTelpon">081231234123</h4>
 					</div>
-					<div class="offset-1 col-4">
-						<h4 class="head-pengirim">From</h4>
-						<h4 id="namaPenerima" name="namaPenerima">Darnilia</h4>
-						<h4 id="alamatPenerima" name="alamatPenerima">Jln. Tun Abdul Razak Ruko Walk J10 Citra Land Gowa</h4>
-						<h4 id="noTelpon" name="noTelpon">081231234123</h4>
+
+				</div>
+			</section>
+			<!-- akhir waktu -->
+		</header>
+		<main>
+			<!-- Table transakasi -->
+			<table>
+				<thead>
+					<tr>
+						<th class="head-table">TREATMENT</th>
+						<th class="head-table">THERAPIST</th>
+						<th class="head-table">PRICE</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td class="isi" id="tipeTreatment" name="tipeTreatment">Eylash Extension</td>
+						<td class="isi" id="therapist" name="therapist">Nur Azizah</td>
+						<td class="isi" id="price" name="price">Rp400.000</td>
+					</tr>
+					<tr>
+						<td class="isi" id="tipeTreatment" name="tipeTreatment">Eylash Extension</td>
+						<td class="isi" id="therapist" name="therapist">Nur Azizah</td>
+						<td class="isi" id="price" name="price">Rp400.000</td>
+					</tr>
+				</tbody>
+			</table>
+			<!-- akhir table transaksi -->
+
+			<!-- info total -->
+			<section class="info-total">
+				<div class="container">
+					<div class="row">
+						<div class="col-7 catatan kt-hidden">
+							<div class="form-group row">
+								<h4 for="tipeKomplain" class="col-4 col-form-label">Tipe Komplain</h4>
+								<div class="col-8">
+									<input disabled="" class="form-control" type="text" value="Gatal-gatal" name="tipeKomplain" id="tipeKomplain">
+								</div>
+							</div>
+							<div class="form-group row">
+								<h4 for="deskripsi Komplain" class="col-4 col-form-label">Deskripsi</h4>
+								<div class="col-8">
+									<textarea rows="3" class="form-control" type="text" value="Artisanal kale" id="deskripsi Komplain" disabled="">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya </textarea>
+								</div>
+							</div>
+						</div>
+						<div class="offset-8 col-4 text-left">
+							<div class="row">
+								<div class="col-5">
+									<h4>Subtotal</h4>
+								</div>
+								<div class="col-1">
+									<h4>:</h4>
+								</div>
+								<div class="col-6">
+									<h4 id="subtotal" name="subtotal">Rp800.000</h4>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-5">
+									<h4>Diskon</h4>
+								</div>
+								<div class="col-1">
+									<h4>:</h4>
+								</div>
+								<div class="col-6">
+									<h4 id="diskon" name="diskon">Rp100.000</h4>
+								</div>
+							</div>
+							<div class="row row-total">
+								<div class="col-5">
+									<h4 class="total">Total</h4>
+								</div>
+								<div class="col-1">
+									<h4>:</h4>
+								</div>
+								<div class="col-6">
+									<h4 class="total" id="total" name="total">Rp700.000</h4>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<!-- akhir info pengirim penerima -->
+			</section>
+			<!-- akhir info total -->
 
-	</main>
-	<footer class="kt-hidden">
-		Invoice was created on a computer and is valid without the signature and seal.
-	</footer>
+			<!-- info pengirim penerima -->
+			<section class="pengirimPenerima mt-5" id="pengirimPenerima">
+				<div class="container">
+					<div class="row pengirim-penerima">
+
+					</div>
+				</div>
+			</section>
+			<!-- akhir info pengirim penerima -->
+
+		</main>
+		<footer class="kt-hidden">
+			Invoice was created on a computer and is valid without the signature and seal.
+		</footer>
+	</div>
 </body>
 <script>
 	var KTAppOptions = {
@@ -200,7 +197,7 @@
 <script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 <script type="text/javascript">
 	<!--
-		window.print();
+		// window.print();
 //-->
 </script>
 
