design invoice email

--- a/user_admin/print_invoice.html
+++ b/user_admin/print_invoice.html
@@ -33,7 +33,7 @@
 	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 </head>
 <body>
-	<div class="background">
+	<div class="">
 		<header class="clearfix">
 			<div id="logo">
 				<img src="assets/media/misc/inv_header.png">
@@ -48,7 +48,7 @@
 							<h4 id="alamatPenerima" name="alamatPenerima">Jl. Boulevard Ruko Cemp No.5</h4>
 							<h4 id="noTelpon" name="noTelpon">0812-1688-8480</h4>
 						</div>
-						<div class="offset-3 col-3">
+						<div class="offset-3 col-3 text-right custom-margin-jadwal">
 							<h3><span id="noInvoice">#0854312</span></h3>
 							<h3><span id="tanggalInvoice">11 Januari 2020</span></h3>
 							<h3><span id="waktuPengerjaan">08.00 - 9.30 WITA</span></h3>
@@ -196,9 +196,7 @@
 <script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
 <script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 <script type="text/javascript">
-	<!--
-		// window.print();
-//-->
+		window.print();
 </script>
 
 </html>
