--- a/user_therapist/profile_payroll_pinjaman.html
+++ b/user_therapist/profile_payroll_pinjaman.html
@@ -341,7 +341,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																	</a>
 																</li>
 																<li class="kt-nav__item nav-item">
-																	<a class="kt-nav__link nav-link" data-toggle="tab" href="#tab-current" role="tab" aria-selected="false">
+																	<a class="kt-nav__link nav-link" data-toggle="tab" href="#tab-histori" role="tab" aria-selected="false">
 																		<i class="kt-nav__link-icon flaticon2-list-3"></i>
 																		<span class="kt-nav__link-text">Pinjaman Saat Ini</span>
 																	</a>
@@ -363,8 +363,8 @@ License: You must have a valid license purchased only from themeforest(the above
 															</a>
 														</li>
 														<li class="nav-item">
-															<a class="nav-link btn-md" data-toggle="tab" href="#tab-current" role="tab" aria-selected="false">
-																Pinjaman Saat Ini
+															<a class="nav-link btn-md" data-toggle="tab" href="#tab-histori" role="tab" aria-selected="false">
+																Histori Pinjaman
 															</a>
 														</li>
 													</ul>
@@ -377,12 +377,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<form id="kt_form_pinjaman">
 	                                                    <div class="row justify-content-center">
 															<div class="col-lg-8 kt-margin-b-10">
-	                                                            <div class="form-group row">
-	            													<label for="example-text-input" class="col-sm-3 col-form-label">Nama</label>
-	            													<div class="col-sm-9">
-	            														<input type="text" class="form-control" name="pinjaman_nama" placeholder="Nama">
-	            													</div>
-	            												</div>
+	                                                            
 	                                                            <div class="form-group row">
 	            													<label for="example-text-input" class="col-sm-3 col-form-label">Nominal</label>
 	            													<div class="col-sm-9">
@@ -417,8 +412,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="tab-pane" id="tab-list" role="tabpanel">
 		                                            <table class="table table-bordered table-hover table-checkable" id="table_pinjaman_list_request"></table>
 												</div>
-												<div class="tab-pane" id="tab-current" role="tabpanel">
-													<table class="table table-bordered table-hover table-checkable" id="table_pinjaman_current"></table>
+												<div class="tab-pane" id="tab-histori" role="tabpanel">
+													<table class="table table-bordered table-hover table-checkable" id="table_pinjaman_histori"></table>
 												</div>
 											</div>
 										</div>
