hilangkan keterangan komisi di user gudang profile payroll detail

--- a/user_gudang/profile_payroll_detail.html
+++ b/user_gudang/profile_payroll_detail.html
@@ -357,7 +357,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </tr>
                                                         <tr role="row">
                                                             <td class="text-center">Komisi</td>
-                                                            <td class="text-center" name="komisi_keterangan">4 Treatment</td>
+                                                            <td class="text-center" name="komisi_keterangan"></td>
                                                             <td class="text-center" name="komisi_nominal">Rp 500.000,00</td>
                                                         </tr>
                                                         <tr role="row">
