New - Create Voucher by Superadmin

--- a/user_superadmin/index.html
+++ b/user_superadmin/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <!--
 Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4 & Angular 8
 Author: KeenThemes
@@ -13,7 +12,6 @@ Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-t
 License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
 -->
 <html lang="en">
-
 	<!-- begin::Head -->
 	<head>
 		<base href="../">
@@ -21,40 +19,28 @@ License: You must have a valid license purchased only from themeforest(the above
 		<title>Dashboard | Superadmin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 		<!--begin::Fonts -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700">
-
 		<!--end::Fonts -->
-
 		<!--begin::Page Vendors Styles(used by this page) -->
-
 		<!--end::Page Vendors Styles -->
-
 		<!--begin::Global Theme Styles(used by all pages) -->
 		<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-
 		<!--end::Global Theme Styles -->
-
 		<!--begin::Layout Skins(used by all pages) -->
 		<link href="assets/css/skins/header/base/light.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/skins/header/menu/light.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/skins/brand/dark.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/skins/aside/dark.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/style/fabulash.css" rel="stylesheet" type="text/css" />
-
 		<!--end::Layout Skins -->
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 	</head>
-
 	<!-- end::Head -->
-
 	<!-- begin::Body -->
 	<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
-
 		<!-- begin:: Page -->
-
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
@@ -67,14 +53,11 @@ License: You must have a valid license purchased only from themeforest(the above
 				<button class="kt-header-mobile__topbar-toggler" id="kt_header_mobile_topbar_toggler"><i class="flaticon-more"></i></button>
 			</div>
 		</div>
-
 		<!-- end:: Header Mobile -->
 		<div class="kt-grid kt-grid--hor kt-grid--root">
 			<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--ver kt-page">
-
 				<!-- begin:: Aside -->
 				<div class="kt-aside  kt-aside--fixed  kt-grid__item kt-grid kt-grid--desktop kt-grid--hor-desktop" id="kt_aside">
-
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
@@ -102,9 +85,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							</button>
 						</div>
 					</div>
-
 					<!-- end:: Aside -->
-
 					<!-- begin:: Aside Menu -->
 					<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper">
 						<div id="kt_aside_menu" class="kt-aside-menu " data-ktmenu-vertical="1" data-ktmenu-scroll="1" data-ktmenu-dropdown-timeout="500">
@@ -207,6 +188,22 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_superadmin/voucher.html" class="kt-menu__link "><span class="kt-menu__link-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+										<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+											<rect x="0" y="0" width="24" height="24"/>
+											<path d="M3,10.0500091 L3,8 C3,7.44771525 3.44771525,7 4,7 L9,7 L9,9 C9,9.55228475 9.44771525,10 10,10 C10.5522847,10 11,9.55228475 11,9 L11,7 L21,7 C21.5522847,7 22,7.44771525 22,8 L22,10.0500091 C20.8588798,10.2816442 20,11.290521 20,12.5 C20,13.709479 20.8588798,14.7183558 22,14.9499909 L22,17 C22,17.5522847 21.5522847,18 21,18 L11,18 L11,16 C11,15.4477153 10.5522847,15 10,15 C9.44771525,15 9,15.4477153 9,16 L9,18 L4,18 C3.44771525,18 3,17.5522847 3,17 L3,14.9499909 C4.14112016,14.7183558 5,13.709479 5,12.5 C5,11.290521 4.14112016,10.2816442 3,10.0500091 Z M10,11 C9.44771525,11 9,11.4477153 9,12 L9,13 C9,13.5522847 9.44771525,14 10,14 C10.5522847,14 11,13.5522847 11,13 L11,12 C11,11.4477153 10.5522847,11 10,11 Z" fill="#000000" opacity="0.3" transform="translate(12.500000, 12.500000) rotate(-45.000000) translate(-12.500000, -12.500000) "/>
+										</g>
+									</svg>
+								</span><span class="kt-menu__link-text">Voucher</span></a></li>
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_superadmin/voucher.html" class="kt-menu__link "><span class="kt-menu__link-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+										<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+											<rect x="0" y="0" width="24" height="24"/>
+											<path d="M3,10.0500091 L3,8 C3,7.44771525 3.44771525,7 4,7 L9,7 L9,9 C9,9.55228475 9.44771525,10 10,10 C10.5522847,10 11,9.55228475 11,9 L11,7 L21,7 C21.5522847,7 22,7.44771525 22,8 L22,10.0500091 C20.8588798,10.2816442 20,11.290521 20,12.5 C20,13.709479 20.8588798,14.7183558 22,14.9499909 L22,17 C22,17.5522847 21.5522847,18 21,18 L11,18 L11,16 C11,15.4477153 10.5522847,15 10,15 C9.44771525,15 9,15.4477153 9,16 L9,18 L4,18 C3.44771525,18 3,17.5522847 3,17 L3,14.9499909 C4.14112016,14.7183558 5,13.709479 5,12.5 C5,11.290521 4.14112016,10.2816442 3,10.0500091 Z M10,11 C9.44771525,11 9,11.4477153 9,12 L9,13 C9,13.5522847 9.44771525,14 10,14 C10.5522847,14 11,13.5522847 11,13 L11,12 C11,11.4477153 10.5522847,11 10,11 Z" fill="#000000" opacity="0.3" transform="translate(12.500000, 12.500000) rotate(-45.000000) translate(-12.500000, -12.500000) "/>
+										</g>
+									</svg>
+								</span><span class="kt-menu__link-text">Voucher</span></a></li>
 								<li class="kt-menu__item" aria-haspopup="true"><a href="user_superadmin/customer.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
@@ -224,16 +221,12 @@ License: You must have a valid license purchased only from themeforest(the above
 							</ul>
 						</div>
 					</div>
-
 					<!-- end:: Aside Menu -->
 				</div>
-
 				<!-- end:: Aside -->
 				<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-wrapper" id="kt_wrapper">
-
 					<!-- begin:: Header -->
 					<div id="kt_header" class="kt-header kt-grid__item  kt-header--fixed ">
-
 						<!-- begin:: Header Menu -->
 						<div class="kt-header-menu-wrapper" id="kt_header_menu_wrapper">
 							<div id="kt_header_menu" class="kt-header-menu kt-header-menu-mobile  kt-header-menu--layout-default ">
@@ -244,12 +237,9 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 							</div>
 						</div>
-
 						<!-- end:: Header Menu -->
-
 						<!-- begin:: Header Topbar -->
 						<div class="kt-header__topbar">
-
 							<!--begin: User Bar -->
 							<div class="kt-header__topbar-item kt-header__topbar-item--user">
 								<div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="0px,0px">
@@ -259,9 +249,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 								</div>
 							</div>
-
 							<!--end: User Bar -->
-
 							<!--begin: Notifications -->
 							<div class="kt-header__topbar-item dropdown">
 								<div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="30px,0px" aria-expanded="true">
@@ -269,7 +257,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 								<div class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-top-unround dropdown-menu-lg">
 									<form>
-
 										<!--begin: Head -->
 										<div class="kt-head kt-head--skin-dark kt-head--fit-x kt-head--fit-b" style="background-image: url(assets/media/misc/bg-1.jpg); height:90px;">
 											<h3 class="kt-head__title">
@@ -278,7 +265,6 @@ License: You must have a valid license purchased only from themeforest(the above
 												<span class="btn btn-success btn-sm btn-bold btn-font-md">23 new</span>
 											</h3>
 										</div>
-
 										<!--end: Head -->
 										<div class="tab-content">
 											<div class="tab-pane active show" id="topbar_notifications_notifications" role="tabpanel">
@@ -315,9 +301,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</form>
 								</div>
 							</div>
-
 							<!--end: Notifications -->
-
 							<!-- begin: Sign Out -->
 							<div class="kt-header__topbar-item">
 								<div class="kt-header__topbar-wrapper">
@@ -326,13 +310,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 							<!-- end: Sign Out -->
 						</div>
-
 						<!-- end:: Header Topbar -->
 					</div>
-
 					<!-- end:: Header -->
 					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
-
 						<!-- begin:: Content Head -->
 						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
@@ -346,19 +327,12 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 							</div>
 						</div>
-
 						<!-- end:: Content Head -->
-
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
-
-
-
 						</div>
-
 						<!-- end:: Content -->
 					</div>
-
 					<!-- begin:: Footer -->
 					<div class="kt-footer  kt-grid__item kt-grid kt-grid--desktop kt-grid--ver-desktop" id="kt_footer">
 						<div class="kt-container  kt-container--fluid " style="justify-content: center;">
@@ -367,21 +341,16 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 						</div>
 					</div>
-
 					<!-- end:: Footer -->
 				</div>
 			</div>
 		</div>
-
 		<!-- end:: Page -->
-
 		<!-- begin::Scrolltop -->
 		<div id="kt_scrolltop" class="kt-scrolltop">
 			<i class="fa fa-arrow-up"></i>
 		</div>
-
 		<!-- end::Scrolltop -->
-
 		<!-- begin::Global Config(global config for global JS sciprts) -->
 		<script>
 			var KTAppOptions = {
@@ -413,22 +382,15 @@ License: You must have a valid license purchased only from themeforest(the above
 				}
 			};
 		</script>
-
 		<!-- end::Global Config -->
-
 		<!--begin::Global Theme Bundle(used by all pages) -->
 		<script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
-
 		<!--end::Global Theme Bundle -->
-
 		<!--begin::Page Vendors(used by this page) -->
-
 		<!--end::Page Vendors -->
-
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-
 		<script>
 			// Select2
 			function formatRepo(repo) {
@@ -447,11 +409,9 @@ License: You must have a valid license purchased only from themeforest(the above
 	                "</div></div>";
 	            return markup;
 	        }
-
 	        function formatRepoSelection(repo) {
 	            return repo.full_name || repo.text;
 	        }
-
 			$("#kt_select2_treatment_customer_nama").select2({
 	            placeholder: "Nama",
 			    multiple: true,
@@ -474,7 +434,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	                    // alter the remote JSON data, except to indicate that infinite
 	                    // scrolling can be used
 	                    params.page = params.page || 1;
-
 						return {
 			                results: $.map(data, function (item) {
 			                    return {
@@ -493,7 +452,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	            // templateResult: formatRepo, // omitted for brevity, see the source of this page
 	            // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
 	        });
-
 			// Sweetalert
 			$('#kt_sweetalert_berhasil').click(function(e) {
 				swal.fire({
@@ -506,7 +464,6 @@ License: You must have a valid license purchased only from themeforest(the above
 					// location.reload();
 				});
 			});
-
 			$('#kt_sweetalert_berhasil_modal').click(function(e) {
 				swal.fire({
 					title: "Berhasil",
@@ -516,7 +473,6 @@ License: You must have a valid license purchased only from themeforest(the above
 					confirmButtonClass: "btn btn-brand"
 				});
 			});
-
 			// Toastr
 			$('#showtoast').click(function() {
 				toastr.options = {
@@ -538,7 +494,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				}
 				toastr.info("Persetujuan terkirim");
 			});
-
 			$('#showtoast').click(function() {
 				toastr.options = {
 					"closeButton": false,
@@ -559,7 +514,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				}
 				toastr.success("Persetujuan diterima");
 			});
-
 			$('#showtoast').click(function() {
 				toastr.options = {
 					"closeButton": false,
@@ -580,7 +534,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				}
 				toastr.error("Persetujuan ditolak");
 			});
-
 			// Form Validation
 			$("#kt_form_1").validate({
 	            // define validation rules
@@ -593,7 +546,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	                    required: true
 	                }
 	            },
-
 	            invalidHandler: function(event, validator) {
 	                KTUtil.scrollTop();
 	            },
@@ -601,7 +553,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	                //form[0].submit(); // submit the form
 	            }
         	});
-
 			$("#kt_form_2").validate({
 	            // define validation rules
 	            rules: {
@@ -623,7 +574,6 @@ License: You must have a valid license purchased only from themeforest(the above
 						required: true
 					}
 	            },
-
 	            invalidHandler: function(event, validator) {
 	                KTUtil.scrollTop();
 	            },
@@ -634,6 +584,5 @@ License: You must have a valid license purchased only from themeforest(the above
 		</script>
 		<!--end::Page Scripts -->
 	</body>
-
 	<!-- end::Body -->
 </html>
