tambah kategori di tambah karyawan dan biodata, tambah foto di invoice dan biodata

--- a/user_admin/email_invoice.html
+++ b/user_admin/email_invoice.html
@@ -142,6 +142,42 @@
 				</div>
 			</section>
 			<!-- akhir info total -->
+			
+			<!-- List Therapist -->
+			<section class="therapist mt-5" id="therapist">
+				<div class="container">
+					<h3 style="color: #41A39C">Therapist</h3>
+					<div class="row text-center pt-3 pb-3 line-therapist">
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_4.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Nur Fitria</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_7.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Suci Drough</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_20.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Veronica</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_20.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Veronica</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_20.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Veronica</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Akhir list therapist -->
+
 
 			<!-- info pengirim penerima -->
 			<section class="pengirimPenerima mt-5" id="pengirimPenerima">
