--- a/user_admin/profile_biodata.html
+++ b/user_admin/profile_biodata.html
@@ -344,11 +344,14 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="kt-portlet__body">
                                             <div class="row">
-                                                <div class="col-lg-6 kt-margin-b-10">
-                                                    <div class="form-group row">
+                                            	<div class="col-lg-6 kt-margin-b-10">
+                                            		<div class="container mb-4 text-center">
+                                            			<img class="img-thumbnail rounded-circle" width="42%" src="assets/media/users/300_11.jpg">
+                                            		</div>
+                                            		<div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Nama</label>
                                                         <div class="col-9">
-                                                            <input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
+                                                            <input type="text" class="form-control disabled" name="karyawan_nama" value="Ica" readonly>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
@@ -357,12 +360,21 @@ License: You must have a valid license purchased only from themeforest(the above
                                                             <input type="text" class="form-control" name="karyawan_jabatan" value="Admin Studio" readonly>
                                                         </div>
                                                     </div>
-                                                    <div class="form-group row">
-                                                        <label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                                                     <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Kategori</label>
                                                         <div class="col-9">
-                                                            <input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
+                                                            <input type="text" class="form-control" name="karyawan_kategori" value="Eylesesh Extension" readonly>
                                                         </div>
                                                     </div>
+                                                   
+                                            	</div>
+                                                <div class="col-lg-6 kt-margin-b-10">
+                                                	<div class="form-group row">
+                                                		<label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                                                		<div class="col-9">
+                                                			<input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
+                                                		</div>
+                                                	</div>
                                                     <div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Email</label>
                                                         <div class="col-9">
@@ -381,15 +393,13 @@ License: You must have a valid license purchased only from themeforest(the above
                                                             <input type="text" class="form-control" name="karyawan_username" value="ica" readonly>
                                                         </div>
                                                     </div>
-                                                    <div class="form-group row">
+                                                    <div class="form-group row kt-hidden">
                                                         <label for="example-text-input" class="col-3 col-form-label">Password</label>
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_password" value="123456" readonly>
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <div class="col-lg-6 kt-margin-b-10">
-                                                    <div class="form-group row">
+                                                      <div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Gaji Pokok</label>
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_gaji" value="Rp. 6.000.000,00" readonly>
@@ -408,6 +418,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <!-- <div class="col-lg-4 kt-margin-b-10">
+                                                  
+                                                </div> -->
+
                                             </div>
 										</div>
 									</div>
