--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -443,6 +443,17 @@ License: You must have a valid license purchased only from themeforest(the above
 														</select>
                                                     </div>
                                                 </div>
+                                                <div class="form-group row">
+                                                    <label for="karyawan_kategori" class="col-sm-4 col-form-label">Kategori :</label>
+                                                    <div class="col-sm-8">
+														<select class="form-control" name="karyawan_kategori">
+															<option value="" selected disabled>Kategori</option>
+															<option>Kategori 1</option>
+															<option>Kategori 2</option>
+															<option>Katgori 3</option>
+														</select>
+                                                    </div>
+                                                </div>
 												<div class="form-group row">
                                                     <label for="example-text-input" class="col-sm-4 col-form-label">Alamat :</label>
                                                     <div class="col-sm-8">
