--- a/user_admin/print_invoice.html
+++ b/user_admin/print_invoice.html
@@ -31,6 +31,9 @@
 	<link href="assets/css/style/print-style.css" rel="stylesheet" type="text/css" />
 	<!--end::Layout Skins -->
 	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+	<style>
+
+	</style>
 </head>
 <body>
 	<div class="">
@@ -89,20 +92,6 @@
 			<section class="info-total">
 				<div class="container">
 					<div class="row">
-						<div class="col-7 catatan kt-hidden">
-							<div class="form-group row">
-								<h4 for="tipeKomplain" class="col-4 col-form-label">Tipe Komplain</h4>
-								<div class="col-8">
-									<input disabled="" class="form-control" type="text" value="Gatal-gatal" name="tipeKomplain" id="tipeKomplain">
-								</div>
-							</div>
-							<div class="form-group row">
-								<h4 for="deskripsi Komplain" class="col-4 col-form-label">Deskripsi</h4>
-								<div class="col-8">
-									<textarea rows="3" class="form-control" type="text" value="Artisanal kale" id="deskripsi Komplain" disabled="">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya </textarea>
-								</div>
-							</div>
-						</div>
 						<div class="offset-8 col-4 text-left">
 							<div class="row">
 								<div class="col-5">
@@ -142,6 +131,41 @@
 				</div>
 			</section>
 			<!-- akhir info total -->
+	
+			<!-- List Therapist -->
+			<section class="therapist mt-5" id="therapist">
+				<div class="container">
+					<h3 style="color: #41A39C">Therapist</h3>
+					<div class="row text-center pt-3 pb-3 line-therapist">
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_4.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Nur Fitria</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_7.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Suci Drough</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_20.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Veronica</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_20.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Veronica</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+						<div class="col-3 therapist-list-invoice">
+							<img id="profilTherapist1" name="profilTherapist1" class="rounded-circle img-thumbnail" width="50%" src="assets/media/users/300_20.jpg">
+							<h4 id="namaTherapist1" name="namaTherapist1">Veronica</h4>
+							<h4 id="kategoriTherapist1" name="kategoriTherapist1">Eylash Extension</h4>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Akhir list therapist -->
 
 			<!-- info pengirim penerima -->
 			<section class="pengirimPenerima mt-5" id="pengirimPenerima">
@@ -196,7 +220,7 @@
 <script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
 <script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 <script type="text/javascript">
-		window.print();
-</script>
+		// window.print();
+	</script>
 
-</html>
+	</html>
