--- a/user_therapist/profile_biodata.html
+++ b/user_therapist/profile_biodata.html
@@ -282,16 +282,16 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
 
 						<!-- begin:: Content Head -->
-                        <div class="kt-subheader  kt-grid__item" id="kt_subheader">
+						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
 										Profile </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_therapist/profile_biodata.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_admin/profile_biodata.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_therapist/profile_biodata.html" class="kt-subheader__breadcrumbs-link">
+										<a href="user_admin/profile_biodata.html" class="kt-subheader__breadcrumbs-link">
 											Biodata </a>
 									</div>
 								</div>
@@ -301,7 +301,6 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
                             <div class="row row-centered">
@@ -322,8 +321,11 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="kt-portlet__body">
                                             <div class="row">
-                                                <div class="col-lg-6 kt-margin-b-10">
-                                                    <div class="form-group row">
+                                            	<div class="col-lg-6 kt-margin-b-10">
+                                            		<div class="container mb-4 text-center">
+                                            			<img class="img-thumbnail rounded-circle" width="42%" src="assets/media/users/300_11.jpg">
+                                            		</div>
+                                            		<div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Nama</label>
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
@@ -332,15 +334,24 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Jabatan</label>
                                                         <div class="col-9">
-                                                            <input type="text" class="form-control" name="karyawan_jabatan" value="Therapist" readonly>
+                                                            <input type="text" class="form-control" name="karyawan_jabatan" value="Admin Studio" readonly>
                                                         </div>
                                                     </div>
-                                                    <div class="form-group row">
-                                                        <label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                                                     <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Kategori</label>
                                                         <div class="col-9">
-                                                            <input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
+                                                            <input type="text" class="form-control" name="karyawan_kategori" value="Eylesesh Extension" readonly>
                                                         </div>
                                                     </div>
+                                                   
+                                            	</div>
+                                                <div class="col-lg-6 kt-margin-b-10">
+                                                	<div class="form-group row">
+                                                		<label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                                                		<div class="col-9">
+                                                			<input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
+                                                		</div>
+                                                	</div>
                                                     <div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Email</label>
                                                         <div class="col-9">
@@ -359,15 +370,13 @@ License: You must have a valid license purchased only from themeforest(the above
                                                             <input type="text" class="form-control" name="karyawan_username" value="ica" readonly>
                                                         </div>
                                                     </div>
-                                                    <div class="form-group row">
+                                                    <div class="form-group row kt-hidden">
                                                         <label for="example-text-input" class="col-3 col-form-label">Password</label>
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_password" value="123456" readonly>
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <div class="col-lg-6 kt-margin-b-10">
-                                                    <div class="form-group row">
+                                                      <div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Gaji Pokok</label>
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_gaji" value="Rp. 6.000.000,00" readonly>
@@ -386,6 +395,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <!-- <div class="col-lg-4 kt-margin-b-10">
+                                                  
+                                                </div> -->
+
                                             </div>
 										</div>
 									</div>
